k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excop
  labels:
    name: excop
    app: excop-stack
